// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row renders Row_ 1`] = `
<body>
  <div>
    <div
      class="Flex_flexStyle__15ivi84i Flex_flexStyle_align_stretch__15ivi84u Flex_flexStyle_variants_align_stretch__15ivi849 Flex_flexStyle_direction_row__15ivi84j Flex_flexStyle_gap_100__15ivi84y Flex_flexStyle_variants_gap_100__15ivi84d Flex_flexStyle_justify_flexStart__15ivi84l Flex_flexStyle_variants_justify_flexStart__15ivi840"
    >
      <div
        style="border-radius: 8px; background: rgb(64, 74, 84); width: 260px; height: 260px; display: flex; align-items: center; justify-content: center;"
      >
        260px
         x 
        260px
      </div>
      <div
        style="border-radius: 8px; background: rgb(64, 74, 84); width: 140px; height: 140px; display: flex; align-items: center; justify-content: center;"
      >
        140px
         x 
        140px
      </div>
      <div
        style="border-radius: 8px; background: rgb(64, 74, 84); width: 200px; height: 200px; display: flex; align-items: center; justify-content: center;"
      >
        200px
         x 
        200px
      </div>
      <div
        style="border-radius: 8px; background: rgb(64, 74, 84); width: 400px; height: auto; display: flex; align-items: center; justify-content: center;"
      >
        400px
         x 
        auto
      </div>
    </div>
  </div>
</body>
`;

exports[`Row renders RowWithItem 1`] = `
<body>
  <div>
    <div
      class="Flex_flexStyle__15ivi84i Flex_flexStyle_align_stretch__15ivi84u Flex_flexStyle_variants_align_stretch__15ivi849 Flex_flexStyle_direction_row__15ivi84j Flex_flexStyle_gap_100__15ivi84y Flex_flexStyle_variants_gap_100__15ivi84d Flex_flexStyle_justify_flexStart__15ivi84l Flex_flexStyle_variants_justify_flexStart__15ivi840"
    >
      <div
        class="Flex_flexItemStyle__15ivi8419 Flex_flexItemStyle_shrink_0__15ivi841a"
      >
        <div
          style="border-radius: 8px; background: rgb(64, 74, 84); width: 260px; height: 260px; display: flex; align-items: center; justify-content: center;"
        >
          260px
           x 
          260px
        </div>
      </div>
      <div
        class="Flex_flexItemStyle__15ivi8419 Flex_flexItemStyle_align_stretch__15ivi841h Flex_flexItemStyle_variants_align_stretch__15ivi8417"
      >
        <div
          style="border-radius: 8px; background: rgb(64, 74, 84); width: 100%; height: 100%; display: flex; align-items: center; justify-content: center;"
        >
          100%
           x 
          100%
        </div>
      </div>
      <div
        class="Flex_flexItemStyle__15ivi8419"
      >
        <div
          style="border-radius: 8px; background: rgb(64, 74, 84); width: 200px; height: 200px; display: flex; align-items: center; justify-content: center;"
        >
          200px
           x 
          200px
        </div>
      </div>
      <div
        style="border-radius: 8px; background: rgb(64, 74, 84); width: 400px; height: auto; display: flex; align-items: center; justify-content: center;"
      >
        400px
         x 
        auto
      </div>
    </div>
  </div>
</body>
`;
